# mobylabs

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  todo.md  tsconfig.json
agent/: executor.py  graph.py  main.py  nodes.py  plan_translator.py  state.py  test.ipynb
app/: globals.css  layout.tsx  page.tsx
app/docs/: layout.tsx  page.tsx
app/pearl/: page.tsx
app/profile/: page.tsx
app/reef/: page.tsx
components/: AppLayout.tsx  Navbar.tsx  ScrollingAbstractsBackground.tsx  SearchBar.tsx  Sidebar.tsx  ToolSelector.tsx
components/docs/: DocsSidebar.tsx
components/pearl/: DeepOceanBackground.tsx  PearlHeader.tsx  ProcessingProgress.tsx  ResearchAngleCard.tsx  ResearchInput.tsx  ResultsSection.tsx  index.ts  types.ts
components/reef/: PreSearchView.tsx  ReefAppLayout.tsx  ReefSidebar.tsx
containers/research-worker/: CLAUDE.md  Dockerfile  entrypoint.sh
contexts/: AuthContext.tsx
docs/research-workbench-roadmap/: 00-product-vision.md  01-state-model-and-storage.md  02-tui-agent-runtime.md  03-paper-scanner-and-research-map.md  04-hypothesis-and-planning-engine.md  05-experiment-and-notebook-runner.md  06-human-checkpoints-and-review-loops.md  07-gui-application.md  08-evaluation-security-production.md  README.md
lib/: arxiv.ts
moby/: __init__.py  cli.py  models.py  storage.py  tui.py
scripts/: extract_arxiv.py  fetch_arxiv.ts  test-api-curl.sh  test-extract-claims.ts  test-gen-angles.ts  test-rss-feature.ts  test_embedding.ts  update_arxiv.ts  upload_arxiv.ts
tests/: test_storage.py  test_tui_commands.py
(+22 files in other folders)
