[project]
name = "mobylabs-research-tui"
version = "0.1.0"
description = "An empty terminal UI shell for a future human-in-the-loop research agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
moby = "moby.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["moby*"]
